# IMAQLIQ

./: .gitignore
Client/: CMakeLists.txt  cash.txt  potter.txt
Client/Include/: Client.h
Client/Source/: CMakeLists.txt  Client.cpp  main.cpp
Server/: CMakeLists.txt
Server/Include/: Server.h
Server/Source/: CMakeLists.txt  Server.cpp  main.cpp
